<resources>

    <string name="app_name">Athlete Monitor</string>
    <string-array name="ExerciseTimeUnits">
        <item>Seconds</item>
        <item>Minutes</item>
        <item>Hours</item>
    </string-array>
    <string name="open_nav_drawer">Home</string> <!-- refactor? -->
    <string name="ButtonText_SignIn">Sign In</string>
    <string name="ButtonText_RegisterAccount">Create New Account</string>
    <string name="TextView_NoAccount">Enter details to create new account</string>
    <string name="TextView_WelcomeBack">We missed you, sign in below!</string>
    <string name="loginSuccess">We\'re logging you in!</string>
    <string name="loginFailure">Invalid username or password.</string>
    <string name="ButtonText_SignOut">Sign Out</string>
    <string name="accountCreated">Account created.</string>
    <string name="accountNotCreated">Cannot create account.</string>
    <string name="activity_main_motivational_text">\"I don\'t think limits\"</string>
    <string name="activity_main_motivational_text_author">- Usain Bolt</string>
    <string name="activity_main_featured_text">Run Now.</string>
    <string name="activity_main_user_information">User Info</string>
    <string name="activity_main_maps">Maps</string>
    <string name="activity_main_teams">Teams</string>
    <string name="activity_main_goals">Goals</string>
    <string name="activity_main_recorded_workouts">Record Workout</string>
    <string name="activity_main_workouts">Workouts</string>
    <string name="activity_main_exercises">Exercises</string>
    <string name="activity_main_record">Record</string>
    <string name="title_activity_user_information">User Information</string>
    <string name="title_activity_user_information_edit">Edit User Information</string>
    <!--These strings are to be used for DB actions in UserInformationActivity-->
    <string name="activity_user_information_firebase">user_information/%s</string>
    <!--These strings are to be used in UserInformationActivity-->
    <string name="activity_user_information_age">Age:</string>
    <string name="activity_user_information_height">Height:</string>
    <string name="activity_user_information_weight">Weight:</string>
    <string name="activity_user_information_athlete_type">Athlete Type:</string>
    <string name="activity_user_information_user_image">User Image:</string>
    <!--These are format strings in the UI-->
    <string name="activity_user_information_format_name">%s %s</string>
    <string name="activity_user_information_format_statement">%s</string>
    <string name="activity_user_information_format_age">%d</string>
    <string name="activity_user_information_format_height">%d cm</string>
    <string name="activity_user_information_format_weight">%d kg</string>
    <string name="activity_user_information_format_athlete_type">%s</string>
    <string name="activity_user_information_format_user_image">%s</string>
    <!--These are default strings in the UI-->
    <string name="activity_user_information_default_name">Your Name</string>
    <string name="activity_user_information_default_statement">Your Personal Statement</string>
    <string name="activity_user_information_default_age">0</string>
    <string name="activity_user_information_default_height">0 cm</string>
    <string name="activity_user_information_default_weight">0 kg</string>
    <string name="activity_user_information_default_athlete_type">Athlete</string>
    <string name="activity_user_information_default_user_image">Run</string>
    <!--These strings are for testing-->
    <string name="user_information_test_first_name">Auston</string>
    <string name="user_information_test_last_name">Matthews</string>
    <string name="user_information_test_age">20</string>
    <string name="user_information_test_height">191</string>
    <string name="user_information_test_height_cm">191 cm</string>
    <string name="user_information_test_weight">98</string>
    <string name="user_information_test_weight_kg">98 kg</string>
    <string name="user_information_test_athlete_type">Hockey Player</string>
    <string name="user_information_test_statement">I want to win the Stanley Cup</string>

    <!--These strings are for the record, now maps, activity-->
    <string name="activity_maps_navigation_record_button">Record</string>
    <string name="activity_maps_navigation_pause_button">Pause</string>
    <string name="activity_maps_firebase">recorded_workouts/%s</string>
    <string name="activity_maps_firebase_user_locs">user_locations</string>
    <string name="activity_maps_save_dialog">Do you want to save this workout?</string>
    <string name="activity_maps_yes">Yes</string>
    <string name="activity_maps_no">No</string>

    <string name="logout_while_offline_warning">You have locally saved data.</string>
    <string name="logout_while_offline_warning_save">Save and quit</string>
    <string name="logout_while_offline_warning_quit">Quit</string>
    <string name="submitChanges">Submit Changes</string>

    <string name="sendInvite">Send Invitation</string>


    <string name="ownershipTransferred">Ownership transferred.</string>
    <string name="ownershipTransferredFailed">Owner Transfer Failed</string>

    <string-array name="ImageIds">
        <item>Bicycle</item>
        <item>Face</item>
        <item>Film</item>
        <item>Key</item>
        <item>Monkey</item>
        <item>Music</item>
        <item>Paw</item>
        <item>Pizza</item>
        <item>Row</item>
        <item>Run</item>
        <item>Smiley</item>
        <item>Swim</item>
        <item>Walk</item>
        <item>Weight</item>
        <item>Wheelchair</item>
    </string-array>

    <!-- Search Results -->
    <string name="apply">Apply</string>

    <!-- Team menu options -->
    <string name="action_join_team">Join a team</string>
    <string name="action_create_team">Create a team</string>
    <string name="search_team_name_hint">Enter team name...</string>

    <!-- Team details menu options -->
    <string name="action_transfer_ownership">Transfer Ownership</string>
    <string name="action_invite_user">Invite new member</string>
    <string name="action_edit_team">Edit team</string>
    <string name="your_team_name">Your Team Name</string>
    <string name="your_team_motto">Your team motto</string>
    <string name="team_members">Team Members</string>
    <string name="name">Name</string>
    <string name="last_online">last online:</string>
    <string name="search_for_team_members_hint">Search other users</string>
    <string name="action_quit_team">Quit team</string>
    <string name="search_results">Search Results</string>
    <string name="hint_login_enter_username">Enter username...</string>
    <string name="hint_login_enter_password">Enter password...</string>
    <string name="appName">AtheleteMonitor</string>
    <string name="content_desc_dal_logo">Dalhousie University</string>
    <string name="register_account">Create Account</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_title_create_new_account">New Account Confirmation</string>
</resources>
